# mk8x-race-history-tracker

./: .env.example  .gitignore  README.md  index.js  package-lock.json  package.json
actix_api/: Cargo.toml
actix_api/src/: cache.rs  main.rs  models.rs
actix_api/src/endpoints/: all_races.rs  mod.rs  player.rs  races.rs  submit.rs
public/: index.html
src/: app.jsx  index.js  indexApi.js
src/components/: Blog.jsx  Footer.jsx  Header.jsx  Home.jsx  Instructions.jsx  Player.jsx  PlayerFilters.jsx  Popularity.jsx  RaceHistory.jsx  RaceStats.jsx  RaceStatsBody.jsx  VideoMain.jsx  VideoPage.jsx  VideoScan.jsx  VideoSettings.jsx  VideoSubmit.jsx
src/components/blogs/: Blog1.jsx
src/images/: index.js
src/images/blog_images/: index.js
src/images/instructions_images/: index.js
src/images/track_images/: index.js
src/json/: scalar.json  tracks.json
src/u8intarrays/placements/: eight.js  eleven.js  extra.js  extra2.js  extra3.js  five.js  four.js  index.js  nine.js  one.js  seven.js  six.js  ten.js  three.js  twelve.js  two.js
src/u8intarrays/tracks/: BC.js  BDD.js  CC.js  DS.js  Ed.js  MC.js  MKS.js  MW.js  RR.js  SA.js  SGF.js  SSC.js  TH.js  TM.js  TR.js  WP.js  bAD.js  bAtD.js  bBB.js  bBC3.js  bBL.js  bBR.js  bCMa.js  bCMo.js  bDC.js  bDCt.js  bDKM.js  bDKS.js  bKC.js  bKD.js  bLAL.js  bLL.js  bMC.js  bMC3.js  bMD.js  bMG.js  bMH.js  bMM.js  bMT.js  bNH.js  (+57 more)
