[package]
name = "actix-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-files = "0.6"
actix-cors = "0.6"
actix-rt = "2.5.0" 
sqlx = { version = "0.6", features = ["mssql", "runtime-actix-native-tls", "chrono"] } # Use sqlx version 0.6.x
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5.0"